force-app/main/default/objects/ProcessEquipment__c/ProcessEquipment__c.object-meta.xml
<CustomObject>
    <label>Dotazioni da processo</label>
    <nameField>
        <displayFormat>DOT-{000000}</displayFormat>
        <label>Dotazione da processo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dotazioni da processo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>