force-app/main/default/objects/ProcessEquipment__c/fields/NewCardKey1__c.field-meta.xml
<CustomField>
    <fullName>NewCardKey1__c</fullName>
    <label>Tessera/Chiavetta 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>