force-app/main/default/objects/ProcessEquipment__c/fields/NewCardKey2__c.field-meta.xml
<CustomField>
    <fullName>NewCardKey2__c</fullName>
    <label>Tessera/Chiavetta 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>