force-app/main/default/objects/ProcessEquipment__c/fields/NewCardKey3__c.field-meta.xml
<CustomField>
    <fullName>NewCardKey3__c</fullName>
    <label>Tessera/Chiavetta 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>