force-app/main/default/objects/ProcessEquipment__c/fields/NewGarbageBag1__c.field-meta.xml
<CustomField>
    <fullName>NewGarbageBag1__c</fullName>
    <label>Sacco 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>