force-app/main/default/objects/ProcessEquipment__c/fields/NewGarbageBin2__c.field-meta.xml
<CustomField>
    <fullName>NewGarbageBin2__c</fullName>
    <label>Bidone 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>