force-app/main/default/objects/ProcessEquipment__c/fields/NewGarbageBin3__c.field-meta.xml
<CustomField>
    <fullName>NewGarbageBin3__c</fullName>
    <label>Bidone 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>