force-app/main/default/objects/ProcessEquipment__c/fields/NewGarbageBin5__c.field-meta.xml
<CustomField>
    <fullName>NewGarbageBin5__c</fullName>
    <label>Bidone 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>