force-app/main/default/objects/ProcessEquipment__c/fields/OldCardKey3__c.field-meta.xml
<CustomField>
    <fullName>OldCardKey3__c</fullName>
    <label>Tessera/Chiavetta 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>