force-app/main/default/objects/ProcessEquipment__c/fields/OldCardKey4__c.field-meta.xml
<CustomField>
    <fullName>OldCardKey4__c</fullName>
    <label>Tessera/Chiavetta 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>