force-app/main/default/objects/ProcessEquipment__c/fields/OldGarbageBag2__c.field-meta.xml
<CustomField>
    <fullName>OldGarbageBag2__c</fullName>
    <label>Sacco 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>