force-app/main/default/objects/ProcessEquipment__c/fields/OldGarbageBag4__c.field-meta.xml
<CustomField>
    <fullName>OldGarbageBag4__c</fullName>
    <label>Sacco 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>