force-app/main/default/objects/ProcessEquipment__c/fields/OldGarbageBin1__c.field-meta.xml
<CustomField>
    <fullName>OldGarbageBin1__c</fullName>
    <label>Bidone 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>