force-app/main/default/objects/ProcessEquipment__c/fields/OldGarbageBin3__c.field-meta.xml
<CustomField>
    <fullName>OldGarbageBin3__c</fullName>
    <label>Bidone 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>