force-app/main/default/objects/ProcessEquipment__c/fields/ResponseJson__c.field-meta.xml
<CustomField>
    <fullName>ResponseJson__c</fullName>
    <label>ResponseJson</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>